# rust-kv-store

./: .gitignore  Cargo.toml  README.md
client/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: command.rs  connection.rs  frame.rs
server/src/: lib.rs  main.rs
src/: lib.rs  main.rs
store/: Cargo.toml
store/benches/: puts_and_gets.rs
store/src/: lib.rs  main.rs
tests-integration/: Cargo.toml
tests-integration/temp/: 1.store.kv
tests-integration/tests/: client_server.rs
tmp_test_files/: .gitignore
