[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "client_server"

[dependencies]
client = { path = "../client" }
server = { path = "../server" }
common = { path = "../common" }
